--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "nodemailer": "^7.0.5",
